@@ -603,6 +603,15 @@ stack_flip_stack(Stack *src, Stack *dest, int flag)
   stack_flip_cards(src, dest, src->num_cards, flag);
 }
 
+void
+stack_flip_move_stack(Stack *src, Stack *dest, int flag)
+{
+  int i;
+  for (i = 0; i < src->num_cards && FACEDOWNP(src->cards[i]); i++);
+  stack_flip_cards(src, dest, src->num_cards - i, flag);
+  stack_move_cards(src, dest, src->num_cards, flag);
+}
+
 static void
 stack_note_undo(Stack *src, Stack *dest, int num, int flag)
 {
